# katz-lab

./: .gitignore  README.md  pyproject.toml
experiment_utils/: 2DACS.py  2DACSS.py  2DACS_copy.py  DC.py  MHz_to_Volt.py  args_ariel.json  args_asaf.json  args_guy.json  args_harel.json  change_args.py  configuration.py  labber_util.py  macros.py  open_hdf5.py  optimal_weights.npz  pulse_amp.py  pulses.py  saver.py  state_discrimination.py  time_estimation.py
katz_lab/: 2DACS.py  2DACSS.py  2DACS_copy.py  MHz_to_Volt.py  args_asaf.json  args_guy.json  args_harel.json  change_args.py  configuration.py  macros.py  open_hdf5.py  pulse_amp.py  saver.py  state_discrimination.py  time_estimation.py
notebooks/: new_notebook.ipynb
scripts/: example.db  sql.py
src/katz_lab/: configuration.py
src/katz_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/katz_lab/calibration utils/: DC.py  helper_functions.py  params.py
src/katz_lab/calibrations/: calibration_store.py
src/katz_lab/config/: config_loader.py  configuration.py  configuration_V2.py  qpu.yaml  simutation.py
src/katz_lab/config/qubits/: q10.yaml
src/katz_lab/experiments/: base_experiment.py  iq_blobs.py  qubit_spectroscopy.py  rabi.py  resonator_spectroscopy.py
src/katz_lab/macros/: macros.py
src/katz_lab/mixer_calibration/: 0_IQ_fmin_1d_copy.py
src/katz_lab/quam_config/: __init__.py  my_quam.py
src/katz_lab/test/: Transmon.py  sim.ipynb  simulation.py
src/katz_lab/utils/: config.py  configuration.py  configuration_V2.py  macros.py  options.py  params.py
tests/: QPU.py  simulation.py
(+13 files in other folders)
